--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "my-project",
-  "version": "0.0.0",
+  "name": "appstore-jonasclaes-be",
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
+    "build-no-checks": "vite build",
     "serve": "vite preview"
   },
   "dependencies": {
